# FlowAroundDisk

./: Makefile.am  additional_maths.h  chebyshev_gauss_integration.h  coordinate_conversions.h  debug_and_validation_functions.h  exact_solutions_finite_disk.h  flow_around_disk.cc  flow_around_disk_problem.h  geom_obj_with_boundary.h  mathematica_definitions.h  moffat_solution.h  moffatt_solution.h  navier_stokes_sing_face_element.h  navier_stokes_sing_face_element.h.backup  rigid_disk_elements.h  sherwood_solution.h  singular_functions.h  tetmesh_faceted_surfaces.h  tetmesh_faceted_surfaces_templated.h  three_d_poiseuille_with_lms.cc  warped_disk_with_torus_geom_obj.h
